--- a/client/main.html
+++ b/client/main.html
@@ -3,6 +3,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<body class="h-full overflow-hidden">
+<body class="h-full">
   <div id="react-target"></div>
 </body>
